# graphai-client

./: .gitignore  README.md  client.py  example.ipynb  pyproject.toml  utils.py
graphai/: client.py  rcp.py  utils.py
graphai/api/: image.py  translation.py  video.py  voice.py
graphai/client_api/: __init__.py  image.py  text.py  translation.py  utils.py  video.py  voice.py
graphai/tests/: api_utils.py  captions.py  text.py  voice.py
graphai_client/: client.py  rcp.py  utils.py
graphai_client/client_api/: __init__.py  embedding.py  image.py  text.py  translation.py  utils.py  video.py  voice.py
graphai_client/rcp/: __init__.py  detect_concepts_for_courses.py  detect_concepts_for_persons.py  detect_concepts_for_publications.py  detect_concepts_for_videos.py  detect_slides.py  embed_concepts.py  get_video_info.py  process_audio.py  translate_slides.py
graphai_client/tests/: api_utils.py  captions.py  text.py  translation.py  voice.py
